--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "path": "^0.12.7"
   },
   "repository": {
     "type": "git",
