--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "nanoid": "^3.3.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuidv4": "^6.2.13"
   },
   "repository": {
     "type": "git",
